Refactor: Code cleanup and modernization
- Changed static final variable name for consistency
- Updated collect(Collectors.toList()) to toList() for simplicity and immutability